<resources>
    <string name="app_name">Faculty Kit</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_student">STUDENT</string>
    <string name="nav_item_doctor">PROFESSOR</string>
    <string name="nav_item_assistant">ASSISTANT</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_student</item>
        <item>@string/nav_item_doctor</item>
        <item>@string/nav_item_assistant</item>
    </string-array>

    <string name="title_student">student</string>
    <string name="title_professor">professor</string>
    <string name="title_assistant">assistant</string>
    <string name="title_activity_test_as_user">test_as_user</string>

    <string name="authication_button_label">Test</string>
    <string name="title_activity_test_as_doctor">test_as_doctor</string>
    <string name="title_activity_create_account_doctor">create_account_doctor</string>
    <string name="title_section1">notification</string>
    <string name="title_section2">send</string>
    <string name="title_section3">lecture</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_size_limit_warning">The selected video must be less than 10 MB.</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_file_too_large">The selected file is too large! Select a new file.</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="content_desc_background">Ribbit Frog Background Image</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_desc_button_divider">Button divider</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Choose Picture</item>
    </string-array>
    <string name="title_activity_profile_doctor_activity">profile_doctor_activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_pdf_viewer">PdfViewer</string>
    <string name="title_activity_pdf">PDFActivity</string>


    <string name="title_activity_activity__date">Activity_Date</string>
    <string name="title_activity_scedual">ScedualActivity</string>


    <string-array name="year">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="section">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="group">
        <item>A</item>
        <item>B</item>
        <item>Cs</item>
        <item>iS</item>

    </string-array>


    <string name="Selection_year">YEAR</string>
</resources>