<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="content_desc_background" />

    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"
        android:text="professor" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthTitle.AuthSubTitle"
        android:text="Please Login to see your data "
        />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer"
        android:layout_below="@+id/subtitle"
        >

        <EditText
            android:id="@+id/usernameLogin"
            style="@style/AuthEditText"
            android:hint="@string/username_hint" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordLogin"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/loginActivityButton"
        style="@style/AuthButton"
        android:text="@string/login_button_label"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginActivityButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/sign_up_text"
        android:textColor="@android:color/white" />

</RelativeLayout>